--- a/rasekopack/assets/minecraft/lang/en_us.json
+++ b/rasekopack/assets/minecraft/lang/en_us.json
@@ -1507,7 +1507,7 @@
   "item.minecraft.music_disc_far.desc": "C418 - far",
   "item.minecraft.music_disc_mall.desc": "Eppu Normaali - Murheellisten laulujen maa",
   "item.minecraft.music_disc_mellohi.desc": "ATC - All Around The World",
-  "item.minecraft.music_disc_stal.desc": "C418 - stal",
+  "item.minecraft.music_disc_stal.desc": "Jussi Kuosa - Jussijytä",
   "item.minecraft.music_disc_strad.desc": "C418 - strad",
   "item.minecraft.music_disc_ward.desc": "C418 - ward",
   "item.minecraft.music_disc_11.desc": "C418 - 11",
