golden apple ja knwoledge book
muutettu ja nimet vaihettu, kys

--- a/rasekopack/assets/minecraft/lang/en_us.json
+++ b/rasekopack/assets/minecraft/lang/en_us.json
@@ -1445,8 +1445,8 @@
   "item.minecraft.cooked_beef": "Kebab rulla",
   "item.minecraft.painting": "Painting",
   "item.minecraft.item_frame": "Item Frame",
-  "item.minecraft.golden_apple": "Golden Apple",
-  "item.minecraft.enchanted_golden_apple": "Enchanted Golden Apple",
+  "item.minecraft.golden_apple": "God-Tier Lätty",
+  "item.minecraft.enchanted_golden_apple": "Ascended God-Tier Lätty",
   "item.minecraft.sign": "Sign",
   "item.minecraft.bucket": "Bucket",
   "item.minecraft.water_bucket": "Water Bucket",
@@ -1512,7 +1512,7 @@
   "item.minecraft.music_disc_ward.desc": "C418 - ward",
   "item.minecraft.music_disc_11.desc": "C418 - 11",
   "item.minecraft.music_disc_wait.desc": "C418 - wait",
-  "item.minecraft.bone": "Bone",
+  "item.minecraft.bone": "Juutalaisen Jäänteet",
   "item.minecraft.ink_sac": "Ink Sac",
   "item.minecraft.red_dye": "Red Dye",
   "item.minecraft.green_dye": "Green Dye",
@@ -1528,7 +1528,7 @@
   "item.minecraft.light_blue_dye": "Light Blue Dye",
   "item.minecraft.magenta_dye": "Magenta Dye",
   "item.minecraft.orange_dye": "Orange Dye",
-  "item.minecraft.bone_meal": "Bone Meal",
+  "item.minecraft.bone_meal": "Juutalaisen Tuhka",
   "item.minecraft.blue_dye": "Blue Dye",
   "item.minecraft.black_dye": "Black Dye",
   "item.minecraft.brown_dye": "Brown Dye",
@@ -1699,7 +1699,7 @@
   "item.minecraft.totem_of_undying": "Totem of Undying",
   "item.minecraft.shulker_shell": "Shulker Shell",
   "item.minecraft.iron_nugget": "Iron Nugget",
-  "item.minecraft.knowledge_book": "Knowledge Book",
+  "item.minecraft.knowledge_book": "Google",
   "item.minecraft.debug_stick": "Debug Stick",
   "item.minecraft.debug_stick.empty": "%s has no properties",
   "item.minecraft.debug_stick.update": "\"%s\" to %s",
